(lots of major bugfixes too)
@
[Nov 06 2010] - Jamdog
  Added HappyHour feature
  Added game_info function for sending global messages to all players
  Added ability to change player/mob level or class in scripts 
  The medit mob flags menu now only shows valid flags (thanks Kyle)
  Skillset now warns imms when the player shouldn't have a skill (thanks Rumble)
  Fly spell added!
[Nov 04 2010] - Jamdog
  Bug-Fix: Converted affect flags in struct affected_type from 32-bit to 128-bit
  Bug Fix: Players with too much gold now don't lose eq when renting
  Bug Fix: Cured SYSERR when selecting an unimplemented obj type in oedit (thanks Rumble)
  Bug Fix: Scan no longer shows the content of dark rooms (thanks Mirad)
  Removed conf.h fron the SVN, as this is created by the configure script
  Minor IBT system change for accurately finding who logged an IBT
  Minor IBT change to list 'in-progress' IBT's in yellow
  Bug Fix: Webster added to the util makefile for make all (wasn't compiling)
  Update to webster code to hopefully fix 'tell m-w' bug
  IBT's no longer read preceding spaces (body and notes), which inserts spaces every copyover
[Nov 01 2010] - Rumble
  Fixed do_scan crash due to exits to NOWHERE. (thanks Rhade)
  Changed do_score experience tnl to list only mortals since LVL_IMMORT showed negative EXP.
[Oct 30 2010] - Jamdog
  Added ability for players to list/show their own ideas, bugs and typos (thanks Frenze)
  Added more details to header for idea/bug/typo show command (thanks Parna)
[Oct 20 2010] - Rumble
  Fixed freeing of null pointers in ibt.c (thanks Stoneheart)
[Sep 28 2010] - Rumble
  Fixed a couple NPC accessing player data errors.
  Fixed oedit extra desc's from always showing "Set" even if they weren't. (thanks Mirad)
[Sep 19 2010] - Rumble
  Updated World and files for 3.62 release.
[Sep 11 2010] - Rumble
  Fixed non-unix file formats and permissions. (thanks Mirad)
[Jul 26 2010] - Rumble