@@ -280,6 +280,7 @@ room_rnum find_target_room(struct char_data *ch, char *rawroomstr);
 void perform_immort_vis(struct char_data *ch);
 void snoop_check(struct char_data *ch);
 bool change_player_name(struct char_data *ch, struct char_data *vict, char *new_name);
+bool AddRecentPlayer(char *chname, char *chhost, bool newplr, bool cpyplr);
 /* Functions with subcommands */
 /* do_date */
 ACMD(do_date);
@@ -322,6 +323,7 @@ ACMD(do_load);
 ACMD(do_peace);
 ACMD(do_plist);
 ACMD(do_purge);
+ACMD(do_recent);
 ACMD(do_restore);
 ACMD(do_return);
 ACMD(do_saveall);
