@@ -42,6 +42,7 @@ Xlist (mlist, olist, rlist, zlist, slist, tlist, qlist)
   The medit mob flags menu now only shows valid flags (thanks Kyle)
   Skillset now warns imms when the player shouldn't have a skill (thanks Rumble)
   Fly spell added!
+  Added recent command
 [Nov 04 2010] - Jamdog
   Bug-Fix: Converted affect flags in struct affected_type from 32-bit to 128-bit
   Bug Fix: Players with too much gold now don't lose eq when renting
